<resources>
    <string name="rating_change_name">Изменить Имя</string>
    <string name="rating">Рейтинг</string>
    <string name="nickname">Никнейм</string>
    <string name="date">Дата</string>
    <string name="count_right_percent">Верные\n ответы (%)</string>
    <string name="time">Среднее\nвремя (с)</string>
    <string name="score">Очки</string>
    <string name="time_value">2.5</string>
    <string name="count_right_percent_value">100</string>
    <string name="score_value">2500</string>
</resources>
