<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="top"
    android:orientation="horizontal"
    android:paddingStart="16dp"
    android:paddingTop="12dp"
    android:paddingEnd="16dp"
    android:paddingBottom="11dp"
    tools:ignore="UseCompoundDrawables">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvRatingTitleUserName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="31"
        android:gravity="start"
        android:text="@string/nickname"
        android:textAppearance="@style/title_text" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvRatingTitleScore"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="15"
        android:gravity="end"
        android:text="@string/score"
        android:textAppearance="@style/title_text" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvRatingTitleCountRight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="28"
        android:gravity="end"
        android:text="@string/count_right_percent"
        android:textAppearance="@style/title_text" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvRatingTitleTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="26"
        android:gravity="end"
        android:text="@string/time"
        android:textAppearance="@style/title_text" />
</LinearLayout>