<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View
        android:id="@+id/vRatingItemItemDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="31"
            android:orientation="vertical"
            android:paddingTop="16dp"
            android:paddingBottom="6dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvRatingItemUserName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingStart="0dp"
                android:paddingEnd="16dp"
                android:text="@string/nickname"
                android:textAppearance="@style/main_item_text" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvRatingItemDate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:text="@string/date"
                android:textAppearance="@style/data_item_text" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvRatingItemScore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="15"
            android:gravity="end"
            android:text="@string/score_value"
            android:textAppearance="@style/main_item_text" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvRatingItemRightPercent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="28"
            android:gravity="end"
            android:text="@string/count_right_percent_value"
            android:textAppearance="@style/main_item_text" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvRatingItemTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="26"
            android:gravity="end"
            android:text="@string/time_value"
            android:textAppearance="@style/main_item_text" />

    </LinearLayout>
</LinearLayout>